BUGFIX: 7117 Fixes
Includes:
* Changes to chosen to include a custom function that will let the
drop-down rise-up if there is room and it would otherwise drop beneath
the size of the window (changes in coffeescript, jquery output, and
chosen css)
* Changes in SCSS to stop the automatic addition of scrollbars, and
to limit the extra space at the bottom of the filter div

Issues remaining:
* jLayout is calculating the height of the filter div incorrectly.
It is assuming the div is around 70px longer than it is. This height
assumption is linked somehow to chosen, as initiating the select box
results in a correct height calculation.

--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -611,6 +611,10 @@ body.cms {
 	@include box-shadow($color-shadow-dark 0 0 ($grid-x / 2));
 	float: left;
 	position: relative;
+
+	&.filter{
+		padding:0 !important;
+	}
 	
 	.cms-panel-header {
 		clear: both;
@@ -624,6 +628,7 @@ body.cms {
 		width: ($grid-x * 22);
 		padding: 0 $grid-x;
 		overflow: auto;
+		overflow-x:hidden;
 		height:100%;
 		.dropdown select {
 			width:$grid-x * 20;
@@ -1454,8 +1459,10 @@ body.cms-dialog {
  * Search forms (used in AssetAdmin, ModelAdmin, etc)
  * -------------------------------------------- */
 .cms-search-form {
-	overflow: auto;
 	margin-bottom: $grid-y*2;
+	.filter &{
+		margin-bottom:0;
+	}
 }
 
 /** --------------------------------------------
